// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logo test cases: should check render 1`] = `
<DocumentFragment>
  <header
    class="css-qejboe"
  >
    CoursesBox
  </header>
</DocumentFragment>
`;

exports[`Logo test cases: should check render with custom size 1`] = `
<DocumentFragment>
  <header
    class="css-pjv2p7"
    size="10"
  >
    CoursesBox
  </header>
</DocumentFragment>
`;
